Saving before doing other thing ...

--- a/Intents & IntentFilters/app/src/main/AndroidManifest.xml
+++ b/Intents & IntentFilters/app/src/main/AndroidManifest.xml
@@ -25,4 +25,11 @@
         <activity android:name=".SecondActivity"/>
     </application>
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SEND"/>
+            <data android:mimeType="text/plain" />
+        </intent>
+    </queries>
+
 </manifest>
