--- a/Intents & IntentFilters/app/src/main/AndroidManifest.xml
+++ b/Intents & IntentFilters/app/src/main/AndroidManifest.xml
@@ -15,11 +15,16 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.IntentsIntentFilters">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="image/*"/>
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity"/>
